# velox4j

.github/workflows/: ut-java.yml
src/main/cpp/: CMakeLists.txt  velox-ref-hash.txt  velox-ref-md5.txt  velox-ref.txt
src/main/cpp/cmake/patches/velox/: 0002-feat-Make-Task-next-invocations-non-blocking.patch
src/main/cpp/main/velox4j/connector/: ExternalStream.cc  ExternalStream.h
src/main/cpp/main/velox4j/iterator/: DownIterator.cc  DownIterator.h  UpIterator.h
src/main/cpp/main/velox4j/jni/: JniWrapper.cc  StaticJniWrapper.cc
src/main/cpp/main/velox4j/lifecycle/: ObjectStore.cc
src/main/cpp/main/velox4j/query/: QueryExecutor.cc
src/main/java/io/github/zhztheplayer/velox4j/connector/: InsertTableHandle.java
src/main/java/io/github/zhztheplayer/velox4j/expression/: ConstantTypedExpr.java
src/main/java/io/github/zhztheplayer/velox4j/iterator/: CloseableIterator.java  DownIterator.java  DownIterators.java  UpIterator.java  UpIterators.java
src/main/java/io/github/zhztheplayer/velox4j/jni/: JniApi.java  JniWrapper.java  StaticJniApi.java  StaticJniWrapper.java
src/main/java/io/github/zhztheplayer/velox4j/plan/: FilterNode.java  PlanNode.java  ProjectNode.java  TableScanNode.java  TableWriteNode.java  ValuesNode.java  WindowNode.java
src/main/java/io/github/zhztheplayer/velox4j/serde/: NativeBean.java
src/main/java/io/github/zhztheplayer/velox4j/serializable/: ISerializableRegistry.java
src/main/java/io/github/zhztheplayer/velox4j/variant/: VarBinaryValue.java
src/main/java/io/github/zhztheplayer/velox4j/window/: BoundType.java  WindowFrame.java  WindowFunction.java  WindowType.java
src/test/java/io/github/zhztheplayer/velox4j/arrow/: ArrowTest.java
src/test/java/io/github/zhztheplayer/velox4j/data/: BaseVectorTest.java  BaseVectorTests.java
src/test/java/io/github/zhztheplayer/velox4j/eval/: EvaluationTest.java
src/test/java/io/github/zhztheplayer/velox4j/jni/: JniApiTest.java
src/test/java/io/github/zhztheplayer/velox4j/query/: QueryTest.java
src/test/java/io/github/zhztheplayer/velox4j/serde/: PlanNodeSerdeTest.java  SerdeTests.java  TypedExprSerdeTest.java
src/test/java/io/github/zhztheplayer/velox4j/test/: UpIteratorTests.java
